# finefab-life

./: .env.example  .env.prod.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml
makelife-cad/: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.web  Makefile  README.md  index.html  package.json  pyproject.toml  tailwind.config.ts  tsconfig.json  vite.config.ts
makelife-cad/.github/: copilot-instructions.md
makelife-cad/.github/workflows/: ci.yml  electron-build.yml
makelife-cad/app/macos/: AGENTS.md  CLAUDE.md  project.yml
makelife-cad/electron/: main.ts  preload.ts
makelife-cad/electron/bridges/: ai.ts  file-watcher.ts  freecad.ts  git.ts  github.ts  kicad.ts  mascarade.ts  platformio.ts  terminal.ts
makelife-cad/electron/utils/: app-settings.ts  detect-tools.ts  gateway-status.ts  process-manager.ts
makelife-cad/gateway/: app.py  freecad_runner.py  kicad_parser.py  llm_client.py  prompts.py  yiacad_client.py
makelife-cad/gateway/routers/: kicad.py
makelife-cad/kicad-bridge/: CMakeLists.txt
makelife-cad/kicad-bridge/include/: kicad_bridge.h  kicad_bridge_swift.h
makelife-cad/kicad-bridge/src/: bridge_3d.c  bridge_drc.c  bridge_pcb.c  bridge_pcb_edit.c  bridge_sch.c  bridge_sch_edit.c  bridge_swift.c  kicad_bridge_internal.h
makelife-cad/scripts/: kicad_drc_check.sh  kicad_smoke_check.sh
makelife-cad/src/: global.d.ts  main.tsx
makelife-cad/src/hooks/: useChatSidebarToggle.ts
makelife-cad/src/lib/: types.ts
makelife-cad/src/pages/: AI.tsx  CI.tsx  Dashboard.tsx  Explorer.tsx  Firmware.tsx  FreeCAD.tsx  Git.tsx  Settings.tsx  TerminalPage.tsx
makelife-cad/src/stores/: ai.ts  git.ts  ui.ts  (+1 more)
makelife-cad/tests/: test_ai_endpoints.py  test_freecad.py  test_gateway.py  test_kicad_parser.py  test_llm_client.py
makelife-cad/web/: package.json
makelife-cad/workflows/: makelife-drc.yml  makelife-firmware.yml
(+133 files in other folders)
